Fixed horizontal scrolling
added overflow hidden to fix horizontal scrolling issue

--- a/Blog Template/style.css
+++ b/Blog Template/style.css
@@ -1,6 +1,7 @@
 
 body, html{
     height:100vh;
+    overflow:hidden;
 }
 body{
     margin:0;
